--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xiaoyun - 跳转导航页</title>
+<title>小云加速 - 跳转导航页</title>
 <style type="text/css">
 body {
 	magin: 0px;
 	font-family: "微软雅黑";
-	background-color: #eaf4ec;
+	background-color: #eaf0f4;
 }
 .prompt_div_time {
 	font-size: 15px;
@@ -117,8 +117,8 @@ a:hover {
 <body>
 <div class="ok">
   <!-- <div style="width:100px; margin:auto;"><img src="logo.png" width="100" height="100" /></div> -->
-  <h1><span>此页面为xiaoyun网址导航页，通过点击下方按钮，您可以快速找到我们的最新官网地址<br /><br />
-    <a href="https://portal.ngvweb.com/" >xiaoyun最新官网地址</a><br />
+  <h1><span>任意门现更名为小云加速，请保存此页面，通过点击下方按钮，您可以找到我们的最新官网地址<br /><br />
+    <a href="https://xiaoyun.xyz/" >小云加速最新官网地址</a><br />
   </h1>
   <div class="prompt_div_time"> <span id="prompt_10s">10</span>秒后自动跳转到新网址</div>
   
@@ -139,7 +139,7 @@ a:hover {
         document.getElementById("prompt_10s").innerHTML=num;  
         if(num==0)  
         {  
-          location.assign("https://xiaoyun.xyz");  
+          location.assign("https://xiaoyun.xyz/");  
        }  
    }  
     setInterval("count()",1000);  
