--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ a:hover {
 <div class="ok">
   <!-- <div style="width:100px; margin:auto;"><img src="logo.png" width="100" height="100" /></div> -->
   <h1><span>任意门现更名为小云加速，请保存此页面，通过点击下方按钮，您可以找到我们的最新官网地址<br /><br />
-    <a href="https://xiaoyun.xyz/" >小云加速最新官网地址</a><br />
+    <a href="https://www.xiaoyun.xyz/" >小云加速最新官网地址</a><br />
   </h1>
   <div class="prompt_div_time"> <span id="prompt_10s">10</span>秒后自动跳转到新网址</div>
   
@@ -139,7 +139,7 @@ a:hover {
         document.getElementById("prompt_10s").innerHTML=num;  
         if(num==0)  
         {  
-          location.assign("https://xiaoyun.xyz/");  
+          location.assign("https://www.xiaoyun.xyz/");  
        }  
    }  
     setInterval("count()",1000);  
